# see-through-web-blender-ui

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  __init__.py  auto_load.py  blender_avatar_autorig_plan.md  blender_manifest.toml  install.bat  preferences.py  properties.py  requirements-inference-annotators.txt  requirements-inference-bnb.txt  requirements-inference-mmdet.txt  requirements-inference-sam2.txt  requirements-training-deepspeed.txt  requirements.txt  run.bat  runtime.py  seethrough_full.bat  utils.py  wheel_manager.py
annotators/: README.md  __init__.py  gradcam.py  pyproject.toml  wdv3_tagger.py
annotators/anime_face_detector/: README.md  detector.py
annotators/animeinsseg/: README.md  dataset.py  instance_segmentation.py  instances.py  mmdet3.yml  rtmdet_inshead_custom.py  skytnt_segmentation.py
annotators/animeinsseg/animeseg_refine_model/: __init__.py  isnet.py
annotators/bizarre_tagger/: README.md  __init__.py  bg_segmenter.py  pos_estimator.py  tagger.py
annotators/lama_inpainter/: README.md  __init__.py  ffc.py
annotators/lang_sam/: README.md  __init__.py  requirements.txt  utils.py
annotators/lang_sam/models/: gdino.py  sam.py
common/: pyproject.toml
common/assets/: bodytags_v3.json  layerdiff3d.json  marigold.json  marigold3d.json  tagcluster_bodypart_v2.json
common/live2d/: scrap_model.py  visualize.py
common/modules/: extend_sam.py  semanticsam.py
common/modules/depth_anything_v2/: adapter.py  dpt.py
common/modules/layerdiffuse/: diffusers_kdiffusion_sdxl.py  layerdiff3d.py  transformer3d.py  utils.py  vae.py
common/modules/marigold/: __init__.py  marigold_depth_pipeline.py
common/modules/marigold/util/: alignment.py  ensemble.py  loss.py
common/modules/sam/: __init__.py  build_sam.py  builder.py  predictor.py  visualize.py
common/modules/sam/modeling/: image_encoder.py  mask_decoder.py  prompt_encoder.py  sam.py  tiny_vit_sam.py  transformer.py
common/modules/sam/utils/: transforms.py
common/utils/: __init__.py  cv.py  inference_utils.py  io_utils.py  sampler.py  ssim_torch.py  torch_utils.py  torchcv.py  visualize.py
core/: alpha_mesh_adapter.py  alpha_trace_parser.py  armature_builder.py  heuristic_rigger.py  models.py  mtoon_materials.py  part_classifier.py  pipeline.py  psd_io.py  psd_layer_filters.py  seethrough_naming.py  voxel_binding.py  vrm_integration.py  weighting.py
operators/: bind_weights.py  build_armature.py  classify_parts.py  (+5 more)
(+25 files in other folders)
