[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "live2d-annotators"
version = "0.1.0"
description = "Annotator modules for live2d_parsing inference pipeline"
dependencies = [
    # Core deps shared by lama_inpainter, wdv3_tagger, gradcam, bizarre_tagger
    "live2d-common",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "Pillow==12.1.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "einops==0.8.2",
    "kornia==0.8.2",
    "timm",
    "huggingface_hub==1.7.2",
    "pandas==2.3.3",
    "grad-cam==1.5.5",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
bizarre_tagger = [
    "detectron2 @ git+https://github.com/facebookresearch/detectron2@a25898a09d6ee232767647e92c6177fb1c642369",
]
lang_sam = [
    "transformers",
    "hydra-core",
    "omegaconf",
    "pydantic>=2.9.2",
    "uvloop",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2@c2ec8e14a185632b0a5d8b161928ceb50197eddc",
]
animeinsseg = [
    "mmcv>=2.2.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.7",
    "pycocotools",
]
all = [
    "live2d-annotators[bizarre_tagger]",
    "live2d-annotators[lang_sam]",
    "live2d-annotators[animeinsseg]",
]

# Note: anime_face_detector is included in the package for code availability but
# requires legacy deps (mmcv-full 1.7, mmdet 2.28, mmpose 0.29, PyTorch 1.13.1)
# that are only available in the ann_mmpose environment. Its deps are NOT declared
# here because they conflict with the modern stack.

[tool.setuptools.packages.find]
# where=[".."] looks at the repo root (parent of annotators/) so that setuptools
# discovers "annotators" as a package and all sub-packages under it.
# This ensures imports like "from annotators.bizarre_tagger import ..." work.
where = [".."]
include = ["annotators", "annotators.*"]
