[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "live2d-common"
version = "0.1.0"
description = "Shared utilities and modules for live2d_parsing sub-codebases"
dependencies = [
    "numpy==2.2.6",
    "Pillow==12.1.1",
    "opencv-python==4.13.0.92",
    "pillow-jxl-plugin==1.3.7",
    "pyyaml==6.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["utils*", "modules*", "live2d*", "assets*"]
